--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,7 @@
 .bg-gradient-custom {
   @apply bg-gradient-to-tr from-slate-700 to-slate-900;
 }
+
+.text-gradient-custom {
+  @apply bg-gradient-to-r from-indigo-300 via-red-200 to-indigo-300 inline-block text-transparent bg-clip-text;
+}
